- Improved : Added possibility to change current encoding while upgrading. (stranger)
- Improved : Libraries default encoding is now UTF-8. (stranger)
- Improved : New smartiy variables on themes for "google analytics code" and "google meta tag". (stranger)
- Improved : Changing fiih link (after upgrading) to a new place for updating system module, right after upgrading is done. (stranger)
- Improved : Added theme_rtl.html to all themes. (stranger)
- Improved : Admin templates to use their style from style files, to make icms more compatible with rtl languages. (stranger)

- Changed : Moved the Smarty library from /class to /libraries. (nekro)
- Changed : Moved the PHPmailer library from /class to /libraries. (nekro)
- Changed : Textarea is now widely. Better to create blocks and editing of templates. (sato-san)
- Changed : Password encryption method from md5 to more secure SHA256 + 2 unique salt keys. (vaughan)
- Changed : PM-Popup size bigger. (sato-san)
- Changed : All instances of target="_blank" replaced with rel="external". (vaughan)

- Fixed #1899685 : Parse error: banners.php on line 226 (kurak_bu/nekro)
- Fixed #1932374 : Changing the 100% width of table in xoops.css to make it 100% only for table.outer (malanciault/real_therplima)  
- Fixed : Removing a notice in debug when update the system module. (real_therplima)
- Fixed : Addition of ".outer {}" was missed. (stranger)

=========================================
2008-03-10 : ImpressCMS 1.0 "Janus" Final
=========================================

- Improved : Updating the VersionChecker to handle situation where the impresscms_xml feed cann not be read (firewall, no internet access, etc...) (malanciault)
- Improved : In the VersionChecker, changed errors to an array and provided a the language constant as the error message - the version checker now reports correctly when it cannot find a valid version_xml (skenow) 
- Improved : admin_version template (sato-san/davidl2)