@@ -346,8 +346,8 @@ modules/system/language/english/admin/preferences.php
 modules/system/language/english/admin/groups.php
 -------------------------------------------------
 +  define("_AM_EDPERM","Can use the WYSIWYG editor in the following modules");
-+  define("_AM_DEBUG_PERM","The Debug Mode is enabled for the next modules");
-+  define("_AM_GROUPMANAGER_PERM","Group Manager rights");
++  define("_AM_DEBUG_PERM","Can see the Debug Mode in the following modules");
++  define("_AM_GROUPMANAGER_PERM","Can change permissions on these groups");
 
 
 modules/system/language/english/admin/blocksadmin.php
